--- a/back_end/Makefile
+++ b/back_end/Makefile
@@ -2,14 +2,18 @@ include ../Makefile.inc
 CPPFLAGS= $(PROJFLAGS) -I ..
 
 DIRS= memory
-SOURCES= opcode_handlers.cc opcode_parser.cc
+SOURCES= opcode_handlers.cc
 OBJS= $(SOURCES:.cc=.o)
 
 all: $(SOURCES) $(OBJS) $(DIRS)
 
+.PHONY:
+clean:
+	rm -rf $(OBJS)
+
 opcode_handlers.o: opcode_handlers.cc opcode_handlers.h registers.h
 
-opcode_parser.o: opcode_parser.cc registers.h opcodes.h
+opcode_parser.o: opcode_parser.h registers.h opcodes.h
 
 memory:
 	$(MAKE) -C memory
