I fixed the linker issues.

--- a/back_end/memory/Makefile
+++ b/back_end/memory/Makefile
@@ -1,7 +1,7 @@
 include ../../Makefile.inc
 CPPFLAGS= $(PROJFLAGS) -I ../..
 
-SOURCES= memory_mapper.cc 
+SOURCES= memory_mapper.cc memory_segment.cc
 OBJS= $(SOURCES:.cc=.o)
 OBJLIBS= ../../libmemory.a
 
@@ -10,7 +10,7 @@ all: $(OBJLIBS)
 ../../libmemory.a: $(OBJS)
 	$(AR) rv ../../libmemory.a $(OBJS)
 
-memory_mapper.o: memory_mapper.cc memory_mapper.h memory_page.h memory_segment.h
+$(OBJS): $(SOURCES)
 
 clean:
 	rm -rf $(OBJS) $(OBJLIBS)
