I implemented the TestHarness.
The TestHarness takes an initial state for TurboSandwich and a set of
opcodes along with the state after each opcode. Look at main.cc for an
example on how to use it.

--- a/back_end/Makefile
+++ b/back_end/Makefile
@@ -1,7 +1,7 @@
 include ../Makefile.inc
 CPPFLAGS= $(PROJFLAGS) -I ..
 
-SOURCES= opcode_handlers.cc opcode_map.cc registers.cc opcodes.cc
+SOURCES= opcode_handlers.cc opcode_map.cc registers.cc opcodes.cc opcode_parser.cc
 OBJS= $(SOURCES:.cc=.o)
 OBJLIBS= ../libbackend.a ../libmemory.a
 
