--- a/test_harness/Makefile
+++ b/test_harness/Makefile
@@ -1,13 +1,17 @@
 include ../Makefile.inc
 CPPFLAGS= $(PROJFLAGS) -I ..
 
-SOURCES= test_harness.cc
-OBJS= ../test_harness.o
+# TODO(Brendan): Update the names.
+SOURCES= test_harness.cc main.cc
+OBJS= ../test_harness.o ../main.o
 
 all: $(OBJS)
 
 ../test_harness.o: test_harness.cc
 	$(CC) $(CPPFLAGS) -c test_harness.cc -o ../test_harness.o
+
+../main.o: main.cc
+	$(CC) $(CPPFLAGS) -c main.cc -o ../main.o
 
 clean:
 	rm -rf $(OBJS)
