I set up GUnit and reworked TestHarness as a GUnit test fixture.

--- a/back_end/Makefile
+++ b/back_end/Makefile
@@ -1,22 +1,36 @@
 include ../Makefile.inc
-CPPFLAGS= $(PROJFLAGS) -I ..
+CPPFLAGS= $(PROJFLAGS) #-I ..
 
 SOURCES= opcode_handlers.cc opcode_map.cc registers.cc opcodes.cc opcode_parser.cc
 OBJS= $(SOURCES:.cc=.o)
-OBJLIBS= ../libbackend.a ../libmemory.a
+OBJLIBS= $(PROJECT_DIR)/libbackend.a $(PROJECT_DIR)/libmemory.a
+GTEST_OBJLIB= $(PROJECT_DIR)/third_party/gtest/gtest_main.a
+TEST_SOURCES= opcode_handlers_test.cc
+TEST_OBJS= $(TEST_SOURCES:.cc=.o)
+TESTS= test_bin
 
 all: $(OBJLIBS)
 
-../libbackend.a: $(OBJS)
-	$(AR) rv ../libbackend.a $(OBJS)
+$(PROJECT_DIR)/libbackend.a: $(OBJS)
+	$(AR) rv $(PROJECT_DIR)/libbackend.a $(OBJS)
 
-../libmemory.a: force_look
+$(PROJECT_DIR)/libmemory.a: force_look
 	$(MAKE) -C memory
 
-opcode_handlers.o: opcode_handlers.cc opcode_handlers.h registers.h
+test: $(TESTS)
+	./test_bin
+
+$(TESTS): $(TEST_OBJS) $(OBJS) $(GTEST_OBJLIB) $(PROJECT_DIR)/libmemory.a $(PROJECT_DIR)/libtestharness.a
+	$(CC) -o $(TESTS) $(TEST_OBJS) $(OBJS) -l:$(PROJECT_DIR)/third_party/gtest/gtest_main.a -l:$(PROJECT_DIR)/libmemory.a -lpthread -l:$(PROJECT_DIR)/libtestharness.a
+
+$(GTEST_OBJLIB): force_look
+	$(MAKE) -C $(PROJECT_DIR)/third_party/gtest/
+
+$(PROJECT_DIR)/libtestharness.a: force_look
+	$(MAKE) -C $(PROJECT_DIR)/test_harness
 
 clean:
-	rm -rf $(OBJS) $(OBJLIBS)
+	rm -rf $(OBJS) $(OBJLIBS) $(TEST_OBJS) $(TESTS)
 	$(MAKE) -C memory clean
 
 force_look:
