Made PROJECT_ROOT relative.

--- a/back_end/Makefile
+++ b/back_end/Makefile
@@ -1,4 +1,5 @@
 include ../Makefile.inc
+PROJECT_DIR= ..
 CPPFLAGS= $(PROJFLAGS) #-I ..
 
 SOURCES= opcode_handlers.cc opcode_map.cc registers.cc opcodes.cc opcode_parser.cc
