--- a/back_end/memory/Makefile
+++ b/back_end/memory/Makefile
@@ -1,14 +1,15 @@
 include ../../Makefile.inc
+PROJECT_DIR= ../..
 CPPFLAGS= $(PROJFLAGS) -I ../..
 
 SOURCES= memory_mapper.cc memory_segment.cc
 OBJS= $(SOURCES:.cc=.o)
-OBJLIBS= ../../libmemory.a
+OBJLIBS= $(PROJECT_DIR)/libmemory.a
 
 all: $(OBJLIBS)
 
-../../libmemory.a: $(OBJS)
-	$(AR) rv ../../libmemory.a $(OBJS)
+$(PROJECT_DIR)/libmemory.a: $(OBJS)
+	$(AR) rv $(PROJECT_DIR)/libmemory.a $(OBJS)
 
 $(OBJS): $(SOURCES)
 
