--- a/test_harness/Makefile
+++ b/test_harness/Makefile
@@ -3,17 +3,14 @@ PROJECT_DIR= ..
 CPPFLAGS= $(PROJFLAGS) -I ..
 
 # TODO(Brendan): Update the names.
-SOURCES= test_harness.cc main.cc
-OBJS= $(PROJECT_DIR)/test_harness.o ../main.o
+SOURCES= test_harness.cc
+OBJS= $(PROJECT_DIR)/test_harness.o
 OBJLIBS= $(PROJECT_DIR)/libtestharness.a
 
 all: $(OBJS) $(OBJLIBS)
 
 $(PROJECT_DIR)/test_harness.o: test_harness.cc
 	$(CC) $(CPPFLAGS) -c test_harness.cc -o $(PROJECT_DIR)/test_harness.o
-
-$(PROJECT_DIR)/main.o: main.cc
-	$(CC) $(CPPFLAGS) -c main.cc -o $(PROJECT_DIR)/main.o
 
 $(PROJECT_DIR)/libtestharness.a: $(PROJECT_DIR)/test_harness.o
 	$(AR) rv $(PROJECT_DIR)/libtestharness.a $(PROJECT_DIR)/test_harness.o
