Fixed compilation issues.

--- a/back_end/Makefile.am
+++ b/back_end/Makefile.am
@@ -2,4 +2,6 @@ SUBDIRS = memory opcode_executor
 
 noinst_LIBRARIES = libback_end.a
 
+libback_end_a_SOURCES =
+
 libback_end_a_LIBADD = memory/libmemory.a opcode_executor/libopcode_executor.a
