--- a/Makefile.in
+++ b/Makefile.in
@@ -187,12 +187,13 @@ psdir = @psdir@
 sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 srcdir = @srcdir@
+subdirs = @subdirs@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-SUBDIRS = back_end
+SUBDIRS = third_party/gtest test_harness back_end
 all: all-recursive
 
 .SUFFIXES:
