Made the tests work with clang

--- a/configure.ac
+++ b/configure.ac
@@ -11,9 +11,10 @@ AM_INIT_AUTOMAKE
 CPPFLAGS='-I${top_srcdir} -I${top_srcdir}/third_party/gtest/include'
 CXXFLAGS='-std=c++11'
 CFLAGS=''
+#LDFLAGS='-lc++ -libstdc++ -libc++'
 
 # Checks for programs.
-AC_PROG_CXX([g++-4.8 clang])
+AC_PROG_CXX([g++4.8 g++])
 AC_PROG_CC
 AC_PROG_RANLIB
 
