--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ DS_Store
 third_party/glog/
 third_party/gtest/samples/
 third_party/gtest/fused-src/
+third_party/gtest/scripts/
 **/Makefile
 Makefile
 **/.deps
