--- a/back_end/memory/Makefile.am
+++ b/back_end/memory/Makefile.am
@@ -1,3 +1,3 @@
 noinst_LIBRARIES = libmemory.a
 
-libmemory_a_SOURCES = memory_mapper.h memory_mapper.cc memory_segment.h memory_segment.cc memory_page.h
+libmemory_a_SOURCES = memory_mapper.h memory_mapper.cc memory_segment.h mbc.h mbc.cc
