--- a/configure.ac
+++ b/configure.ac
@@ -12,7 +12,8 @@ AC_LANG([C++])
 CPPFLAGS='-I${top_srcdir} -I${top_srcdir}/third_party/gtest/include'
 CXXFLAGS='-std=c++11'
 CFLAGS=''
-#LDFLAGS='-lc++ -libstdc++ -libc++'
+LDFLAGS='-L/usr/local/lib'
+LIBS='-lglog'
 
 # Checks for programs.
 AC_PROG_CXX([g++-4.8 g++])
