--- a/Makefile.in
+++ b/Makefile.in
@@ -193,7 +193,7 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-SUBDIRS = third_party/gtest test_harness back_end
+SUBDIRS = third_party/gtest back_end test_harness
 all: all-recursive
 
 .SUFFIXES:
