Made test harness compatible with new memory mapper.

--- a/back_end/opcode_executor/Makefile.am
+++ b/back_end/opcode_executor/Makefile.am
@@ -1,6 +1,6 @@
 noinst_LIBRARIES = libopcode_executor.a
 
-libopcode_executor_a_SOURCES = opcode_executor.h opcode_executor.cc opcode_handlers.h opcode_handlers.cc opcode_map.h opcode_map.cc opcodes.h opcodes.cc registers.h registers.cc
+libopcode_executor_a_SOURCES = opcode_executor.h opcode_executor.cc opcode_handlers.h opcode_handlers.cc opcode_map.h opcode_map.cc opcodes.h opcodes.cc registers.h
 
 check_PROGRAMS = opcode_handlers_test
 AM_DEFAULT_SOURCE_EXT = .cc
