clocktroller sort of works

--- a/back_end/Makefile.am
+++ b/back_end/Makefile.am
@@ -1,7 +1,7 @@
-SUBDIRS = memory opcode_executor
+SUBDIRS = memory opcode_executor clocktroller
 
 noinst_LIBRARIES = libback_end.a
 
 libback_end_a_SOURCES =
 
-libback_end_a_LIBADD = memory/libmemory.a opcode_executor/libopcode_executor.a
+libback_end_a_LIBADD = memory/libmemory.a opcode_executor/libopcode_executor.a clocktroller/libclocktroller.a
