--- a/back_end/clocktroller/Makefile.in
+++ b/back_end/clocktroller/Makefile.in
@@ -103,7 +103,7 @@ libclocktroller_a_OBJECTS = $(am_libclocktroller_a_OBJECTS)
 clocktroller_test_SOURCES = clocktroller_test.cc
 clocktroller_test_OBJECTS = clocktroller_test.$(OBJEXT)
 clocktroller_test_DEPENDENCIES = libclocktroller.a \
-	../opcode_executor/libopcode_executor.a \
+	../opcode_executor/libopcode_executor.a ../memory/libmemory.a \
 	${top_srcdir}/test_harness/libtest_harness.a \
 	${top_srcdir}/third_party/gtest/lib/libgtest_main.a \
 	${top_srcdir}/third_party/gtest/lib/libgtest.a
@@ -478,7 +478,7 @@ noinst_LIBRARIES = libclocktroller.a
 libclocktroller_a_SOURCES = clocktroller.h clocktroller.cc clocktroller_test.cc
 AM_DEFAULT_SOURCE_EXT = .cc
 clocktroller_test_LDFLAGS = -pthread
-clocktroller_test_LDADD = libclocktroller.a ../opcode_executor/libopcode_executor.a ${top_srcdir}/test_harness/libtest_harness.a ${top_srcdir}/third_party/gtest/lib/libgtest_main.a ${top_srcdir}/third_party/gtest/lib/libgtest.a
+clocktroller_test_LDADD = libclocktroller.a ../opcode_executor/libopcode_executor.a ../memory/libmemory.a ${top_srcdir}/test_harness/libtest_harness.a ${top_srcdir}/third_party/gtest/lib/libgtest_main.a ${top_srcdir}/third_party/gtest/lib/libgtest.a
 all: all-am
 
 .SUFFIXES:
