Fixed the gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,10 @@ third_party/glog/
 third_party/gtest/samples/
 third_party/gtest/fused-src/
 third_party/gtest/scripts/
+*.m4
+**/Makefile.in
 **/Makefile
 Makefile
+Makefile.in
 **/.deps
 .deps
