Added some stuff for profiling.

--- a/configure.ac
+++ b/configure.ac
@@ -10,7 +10,7 @@ AC_LANG([C++])
 
 # CXX='g++-4.8'
 CPPFLAGS='-I${top_srcdir} -I${top_srcdir}/third_party/gtest/include'
-CXXFLAGS='-std=c++11'
+CXXFLAGS='-std=c++11 -O2' # -pg for profiling.
 CFLAGS=''
 LDFLAGS='-L/usr/local/lib'
 LIBS='-lglog -lncurses'
