Fixed more shit.

--- a/back_end/opcode_executor/Makefile.am
+++ b/back_end/opcode_executor/Makefile.am
@@ -6,6 +6,6 @@ check_PROGRAMS = opcode_handlers_test
 AM_DEFAULT_SOURCE_EXT = .cc
 opcode_handlers_test_SOURCES = opcode_executor.cc opcode_handlers_test.cc
 opcode_handlers_test_LDFLAGS = -pthread
-opcode_handlers_test_LDADD =  libopcode_executor.a ../memory/libmemory.a ${top_srcdir}/test_harness/libtest_harness.a ${top_srcdir}/third_party/gtest/lib/libgtest_main.a ${top_srcdir}/third_party/gtest/lib/libgtest.a
+opcode_handlers_test_LDADD =  libopcode_executor.a ../memory/libmemory.a ${top_srcdir}/test_harness/libtest_harness.a ${top_srcdir}/third_party/gtest/lib/libgtest_main.a ${top_srcdir}/third_party/gtest/lib/libgtest.a ../graphics/graphics_controller.o
 
 TESTS = ${check_PROGRAMS}
