--- a/back_end/opcode_executor/Makefile.am
+++ b/back_end/opcode_executor/Makefile.am
@@ -1,11 +1,11 @@
-noinst_LIBRARIES = libopcode_executor.a
+noinst_LTLIBRARIES = libopcode_executor.la
 
-libopcode_executor_a_SOURCES = opcode_executor.h opcode_executor.cc opcode_handlers.h opcode_handlers.cc opcode_map.h opcode_map.cc opcodes.h opcodes.cc registers.h
+libopcode_executor_la_SOURCES = opcode_executor.h opcode_executor.cc opcode_handlers.h opcode_handlers.cc opcode_map.h opcode_map.cc opcodes.h opcodes.cc registers.h
 
 check_PROGRAMS = opcode_handlers_test
 AM_DEFAULT_SOURCE_EXT = .cc
-opcode_handlers_test_SOURCES = opcode_executor.cc opcode_handlers_test.cc
+opcode_handlers_test_SOURCES = opcode_handlers_test.cc
 opcode_handlers_test_LDFLAGS = -pthread
-opcode_handlers_test_LDADD =  libopcode_executor.a ../memory/libmemory.a ${top_srcdir}/test_harness/libtest_harness.a ${top_srcdir}/third_party/gtest/lib/libgtest_main.a ${top_srcdir}/third_party/gtest/lib/libgtest.a ../graphics/graphics_controller.o ../graphics/dma_transfer.o
+opcode_handlers_test_LDADD = libopcode_executor.la ${top_srcdir}/back_end/memory/libmemory.la ${top_srcdir}/test_harness/libtest_harness.la ${top_srcdir}/third_party/gtest/lib/libgtest_main.la ${top_srcdir}/third_party/gtest/lib/libgtest.la ${top_srcdir}/back_end/graphics/libgraphics.la ${top_srcdir}/back_end/clocktroller/libclocktroller.la 
 
 TESTS = ${check_PROGRAMS}
