--- a/test_harness/Makefile.am
+++ b/test_harness/Makefile.am
@@ -1,3 +1,3 @@
-noinst_LIBRARIES = libtest_harness.a
+noinst_LTLIBRARIES = libtest_harness.la
 
-libtest_harness_a_SOURCES = test_harness.h test_harness.cc test_harness_utils.h
+libtest_harness_la_SOURCES = test_harness.h test_harness.cc test_harness_utils.h
