--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,36 @@
 *.o
+*.lo
+*.s
 *.a
+*.la
 *.log
+*.out
 *.zip
 *.cache
 *.status
+*.trs
+*.txt
+*.old
 test
 test_bin
-DS_Store
+back_end/turbo_test
+.DS_Store
 third_party/glog/
 third_party/gtest/samples/
 third_party/gtest/fused-src/
 third_party/gtest/scripts/
+ltmain.sh
+libtool
+ar-lib
+config.*
+*.m4
+**/Makefile.in
 **/Makefile
 Makefile
+Makefile.in
 **/.deps
 .deps
+*.bin
+*.gb
+compile
+test-driver
