--- a/configure.ac
+++ b/configure.ac
@@ -51,6 +51,7 @@ AC_CONFIG_FILES([Makefile
                  back_end/memory/Makefile
                  back_end/opcode_executor/Makefile
                  back_end/clocktroller/Makefile
+                 back_end/debugger/Makefile
                  test_harness/Makefile])
 
 AC_CONFIG_SUBDIRS([third_party/gtest])
