--- a/back_end/Makefile.am
+++ b/back_end/Makefile.am
@@ -4,7 +4,7 @@ noinst_LTLIBRARIES = libback_end.la
 
 libback_end_la_SOURCES =
 
-libback_end_la_LIBADD = memory/libmemory.la opcode_executor/libopcode_executor.la clocktroller/libclocktroller.la graphics/libgraphics.la
+libback_end_la_LIBADD = memory/libmemory.la opcode_executor/libopcode_executor.la clocktroller/libclocktroller.la graphics/libgraphics.la debugger/libdebugger.la
 
 bin_PROGRAMS = turbo_test
 
