--- a/back_end/memory/Makefile.am
+++ b/back_end/memory/Makefile.am
@@ -1,3 +1,3 @@
 noinst_LTLIBRARIES = libmemory.la
 
-libmemory_la_SOURCES = memory_mapper.h memory_mapper.cc memory_segment.h mbc.h mbc.cc
+libmemory_la_SOURCES = memory_mapper.h memory_mapper.cc memory_segment.h mbc.h mbc.cc joypad_memory.h joypad_memory.cc
