Removed cyclic dependencies.
Restructured: Clocktroller, GraphicsController, OpcodeExecutor, and
MemoryMapper. Now has clearly defined hierarchy.

--- a/base_workspace/backend/BUILD
+++ b/base_workspace/backend/BUILD
@@ -3,3 +3,16 @@ cc_library(
   hdrs = ["config.h"],
   visibility = ["//visibility:public"],
 )
+
+cc_binary(
+  name = "turbo",
+  srcs = ["main.cc"],
+  deps = [
+    "//backend:config",
+    "//backend/clocktroller",
+  ],
+  linkopts = [
+    "-L/usr/local/lib",
+    "-lncurses",
+  ],
+)
